Add colophon redirect

--- a/src/colophon.njk
+++ b/src/colophon.njk
@@ -20,3 +20,6 @@ I used [VSCode](https://code.visualstudio.com/) for development; [Chromium Night
 - Another [collection of nice 11ty resources](https://11ty.recipes/) by [Mark Aparicio](https://twitter.com/peruvianidol)
 
 - The [A11Y Project](https://www.a11yproject.com/)
+
+> If you arrived to this page from the project menu card, go back [here](/menu)
+
