Redirect menu pages properly

--- a/src/index.njk
+++ b/src/index.njk
@@ -14,7 +14,11 @@ templateEngineOverride: md, njk
 
 <div class="irevamp-skin"></div>
 
-> THIS WEBSITE IS **CURRENTLY** ~~AVAILABLE FOR VIEWING~~ UNDER CONSTRUCTION
+<blockquote class="blockquote-lilac">
+<p>If you arrived to this page from the project menu card, go back <a href="/menu">here</a></p>
+</blockquote>
+
+> **THIS WEBSITE IS CURRENTLY ~~AVAILABLE FOR VIEWING~~ UNDER CONSTRUCTION**
 
   </div>
   </div>
