--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -227,6 +227,10 @@ blockquote {
   }
 }
 
+.blockquote-lilac {
+  border-left: 12px solid #8dd5ff;
+}
+
 .irevamp-lead {
   font-size: $irevamp-lead-font-size;
   // letter-spacing: 0.01em;
