--- a/src/sass/_menu.scss
+++ b/src/sass/_menu.scss
@@ -74,7 +74,7 @@ $menu-font-cursive: "Great Vibes", cursive;
   }
 
   .menu-item:hover {
-    filter: brightness(1.1);
+    filter: brightness(1.13);
   }
 }
 
@@ -86,7 +86,7 @@ $menu-font-cursive: "Great Vibes", cursive;
   }
 
   .menu-item:hover {
-    filter: brightness(1.2);
+    filter: brightness(1.09);
   }
 }
 
@@ -109,13 +109,25 @@ $menu-font-cursive: "Great Vibes", cursive;
   }
 
   .menu-item:hover {
-    filter: brightness(1.3);
+    filter: brightness(1.5);
   }
 
   .menu-section-title {
     color: #b8b8ff;
   }
 }
+
+.grape-mode {
+  background-color: #ced4fd  ;
+ 
+   .menu-item {
+     background-color: #ced4fd;
+   }
+ 
+   .menu-item:hover {
+     filter: brightness(1.08);
+   }
+ }  
 
 .menu-item {
   display: flex;
@@ -164,7 +176,7 @@ $menu-font-cursive: "Great Vibes", cursive;
   &__price {
     font-family: $menu-font-serif;
     font-weight: 700;
-    margin-top: 5px;
+    margin-top: 3px;
     font-size: 1.2em;
   }
 
@@ -173,6 +185,26 @@ $menu-font-cursive: "Great Vibes", cursive;
     transition: all ease-in-out 0.3s;
   }
 }
+
+.menu-item-row {
+  display: flex;
+  flex-direction: column;
+  
+  @include gt-xs {
+    flex-direction: row;
+    column-gap: 3em;
+  }
+  }
+  
+  .menu-item-column {
+    height: auto;
+    width: 100%;
+
+    @include gt-xs {
+      width: 50%;
+    }
+  }
+
 
 .oak {
   text-align: center;
