Update goodreads page, modify styles

--- a/src/_includes/goodreads.html
+++ b/src/_includes/goodreads.html
@@ -1,27 +1,62 @@
+<div class="irevamp-container">
+<div class="irevamp-section goodreads slide-up">
 
-<div id="gr_challenge_11636" style="border: 2px solid #EBE8D5; border-radius:10px; padding: 0px 7px 0px 7px; max-width:100%; min-height: 100px">
-  <div id="gr_challenge_progress_body_11636" style="font-size: 12px; font-family: georgia,serif;line-height: 18px">
-    <h3 style="margin: 4px 0 10px; font-weight: normal; text-align: center">
-      <a style="text-decoration: none; font-family:georgia,serif;font-style:italic; font-size: 1.1em" rel="nofollow" href="https://www.goodreads.com/challenges/11636-2022-reading-challenge">2022 Reading Challenge</a>
-    </h3>
-        <div class="challengePic">
-          <a rel="nofollow" href="https://www.goodreads.com/challenges/11636-2022-reading-challenge"><img alt="2022 Reading Challenge" style="float:left; margin-right: 10px; border: 0 none" src="https://images.gr-assets.com/challenges/1636444409p2/11636.jpg" /></a>
-        </div>
-      <div>
-        <a class="irevamp-font-text" rel="nofollow" href="https://www.goodreads.com/user/show/60162168-parth-shiralkar">Parth</a> has
-             read 26 books toward
-             his goal of
-             72 books.
-      </div>
-      <div style="width: 100%; margin: 4px 5px 5px 0; float: left; border: 1px solid #382110; height: 8px; overflow: hidden; background-color: #FFF">
-        <div style="width: 100%; background-color: #D7D2C4; float: left"><span style="visibility:hidden">hide</span></div>
-      </div>
-      <div style="font-family: arial, verdana, helvetica, sans-serif;font-size:90%">
-        <a rel="nofollow" href="https://www.goodreads.com/user_challenges/31527237">26 of 72 (36%)</a>
-      </div>
-        <div style="text-align: right;">
-          <a style="text-decoration: none; font-size: 10px;" rel="nofollow" href="https://www.goodreads.com/user_challenges/31527237">view books</a>
-        </div>
+> <div class="irevamp-lead"><a href="https://www.goodreads.com/review/list/60162168-parth-shiralkar?ref=nav_mybooks&shelf=currently-reading">Here's is what I'm currently reading:</a> (clicking on cover will redirect)</div>
+
+<div id="gr_grid_widget_1647304638">
+  <!-- Show static html as a placeholder in case js is not enabled - javascript include will override this if things work -->
+  <div class="gr_grid_container">
+    <div class="gr_grid_book_container">
+      <a
+        title="The Silent Patient"
+        rel="nofollow"
+        href="https://www.goodreads.com/book/show/40097951-the-silent-patient"
+        ><img
+          alt="The Silent Patient"
+          border="0"
+          src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1582759969l/40097951._SX98_.jpg"
+      /></a>
+    </div>
+    <div class="gr_grid_book_container">
+      <a
+        title="Maskerade (Discworld, #18; Witches #5)"
+        rel="nofollow"
+        href="https://www.goodreads.com/book/show/78876.Maskerade"
+        ><img
+          alt="Maskerade"
+          border="0"
+          src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1170961678l/78876._SX98_.jpg"
+      /></a>
+    </div>
+    <div class="gr_grid_book_container">
+      <a
+        title="Cards on the Table (Hercule Poirot, #15)"
+        rel="nofollow"
+        href="https://www.goodreads.com/book/show/16297.Cards_on_the_Table"
+        ><img
+          alt="Cards on the Table"
+          border="0"
+          src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1388208739l/16297._SY160_.jpg"
+      /></a>
+    </div>
+    <div class="gr_grid_book_container">
+      <a title="Nausea" rel="nofollow" href="https://www.goodreads.com/book/show/298275.Nausea"
+        ><img
+          alt="Nausea"
+          border="0"
+          src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1377674928l/298275._SX98_.jpg"
+      /></a>
+    </div>
+    <noscript
+      ><br />Share <a rel="nofollow" href="/">book reviews</a> and ratings with Parth, and even join
+      a <a rel="nofollow" href="/group">book club</a> on Goodreads.</noscript
+    >
   </div>
-	<script src="https://www.goodreads.com/user_challenges/widget/60162168-parth-shiralkar?challenge_id=11636&v=2"></script>
+</div>
+<script
+  src="https://www.goodreads.com/review/grid_widget/60162168.Parth's%20bookshelf:%20currently-reading?cover_size=medium&hide_link=true&hide_title=true&num_books=4&order=d&shelf=currently-reading&sort=date_updated&widget_id=1647304638"
+  type="text/javascript"
+  charset="utf-8"
+></script>
+</div>
 </div>
