--- a/src/sass/_sitenav.scss
+++ b/src/sass/_sitenav.scss
@@ -74,7 +74,7 @@
   }
   &__footer {
     
-    @include lt-sm {
+    @include lt-md {
       justify-content: right;
       line-height: 2;
       margin-left: 0;
