--- a/src/404.njk
+++ b/src/404.njk
@@ -1,6 +1,5 @@
 ---
-layout: base.njk
-templateEngineOverride: md, njk
+layout: skin.njk
+permalink: 404.html
 ---
-
-AAAAAAAAAAAAAAA
+What the hell...
