--- a/src/404.njk
+++ b/src/404.njk
@@ -1,5 +1,17 @@
 ---
 layout: skin.njk
 permalink: 404.html
+title: 'Error 404'
 ---
-What the hell...
+
+<div class="pagenotfound slide-up">
+    <div class="cloud"></div>
+    <div class="pagenotfound-container slide-up">
+        <div class="irevamp-text irevamp-ink--secondary-light uppercase salutation" style="margin-bottom: 0">[ error 404 ]</div>
+        <div class="irevamp-mini irevamp-ink--secondary uppercase" style="margin: 0 auto 2em">That page probably doesn't exist!</div>
+
+        <div class="irevamp-h4 salutation uppercase">X rarely ever marks the spot,</div>
+        <div class="intro-about" style="margin: 0em 0 3em;">and it looks like we're missing a link here. Let's get you sorted:</div>
+        <a href="#" onclick="history.back()" class="intro bold600 uppercase">Go back ⮌</a>
+    </div>
+</div>
