--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -245,6 +245,12 @@ blockquote {
   line-height: 1.3;
 }
 
+.irevamp-mini {
+  font-size: $irevamp-mini-font-size;
+  // letter-spacing: 0.01em;
+  margin: 1em;
+}
+
 .irevamp-description {
   font-size: 1.1em;
   color: $irevamp-color-secondary;
