--- a/src/sass/_pagenotfound.scss
+++ b/src/sass/_pagenotfound.scss
@@ -6,15 +6,20 @@
   transition: all ease-in-out 0.2s;
   max-height: 100vh;
 
-  padding: 15vh 2vh;
+  padding: 4vh 1vh;
   border-radius: 9px;
   box-shadow: 0 12px 20px rgba(0, 0, 0, 0.72);
   .pagenotfound-container {
     text-align: center;
   }
 
-  @include gt-md {
-    padding: 15vh 6vh;
+  @include xs {
+    
+    padding: 4vh 2vh;
+  }
+
+  @include gt-sm {
+    padding: 6vh;
   }
 }
 
@@ -27,8 +32,8 @@
   position: relative;
   display: block;
   padding-left: 1em;
-  width: 6em;
-  height: 6em;
+  width: 4em;
+  height: 4em;
   margin: 0.5em auto;
   color: $irevamp-color-secondary;
   background: $irevamp-color-primary;
@@ -36,6 +41,11 @@
   border-style: solid;
   border-radius: 50% 50% 0 0;
   transition: all ease-in-out 0.2s;
+
+  @include gt-xs {
+    width: 6em;
+    height: 6em;
+  }
 
   @include gt-sm {
     width: 9em;
