--- a/src/404.njk
+++ b/src/404.njk
@@ -1,9 +1,8 @@
 ---
-layout: skin.njk
+layout: base.njk
 permalink: 404.html
 title: 'Error 404'
 ---
-
 <div class="pagenotfound slide-up">
     <div class="cloud"></div>
     <div class="pagenotfound-container slide-up">
