--- a/src/404.njk
+++ b/src/404.njk
@@ -1,16 +1,21 @@
 ---
-layout: base.njk
+layout: bones.njk
 permalink: 404.html
 title: 'Error 404'
 ---
 <div class="pagenotfound slide-up">
-    <div class="cloud"></div>
+   
     <div class="pagenotfound-container slide-up">
-        <div class="irevamp-text irevamp-ink--secondary-light uppercase salutation" style="margin-bottom: 0">error 404</div>
-        <div class="irevamp-ink--secondary uppercase" style="margin: 0 auto 2em">That page probably doesn't exist!</div>
+        <div class="irevamp-text uppercase salutation" style="margin-bottom: 0">404. <span class="irevamp-ink--secondary-light ">That's an error.</div>
+        <div class="irevamp-ink--secondary" style="margin: 0 auto 2em">That page probably doesn't exist!</div>
 
-        <div class="irevamp-h5 salutation uppercase bold600">X rarely ever marks the spot,</div>
-        <div class="intro-about" style="margin: 0em 0 3em;">and it looks like we're missing a link here. Let's get you sorted:</div>
-        <a href="#" onclick="history.back()" class="intro bold600 uppercase">Go back ⮌</a>
+    {# <div class="cloud"></div> #}
+    <img class="crane irevamp-mx-auto" src="{{ '/crane.png' }}">
+
+        {# <div class="irevamp-h5 salutation uppercase bold600" style="margin: 3em ">X rarely ever marks the spot,</div> #}
+        {# <div class="intro-about" style="margin: 0em 0 3em;">and it looks like we're missing a link here. Let's get you sorted:</div> #}
+        {# <a href="#" onclick="history.back()" class="intro bold600 uppercase">Go back ⮌</a> #}
+        <button onclick="history.back()" class="intro bold600 uppercase pagenotfound-button" style="margin-top: 2.5em">Go back &#11148;</button>
     </div>
+
 </div>
