--- a/src/sass/_pagenotfound.scss
+++ b/src/sass/_pagenotfound.scss
@@ -2,27 +2,20 @@
 @use "media-queries" as *;
 
 .pagenotfound {
-  transition: all ease-in-out 0.2s;
+  padding: 6vh 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%; height: 100%;
 
-  padding: 6vh 1vh;
-  border-radius: 9px;
-  box-shadow: 0 12px 20px rgba(0, 0, 0, 0.3);
   .pagenotfound-container {
     text-align: center;
   }
 
-  @include xs {
-    padding: 4vh 0;
+  @include gt-xs {
+    padding-top: 10vh;
   }
-
-  @include gt-sm {
-    padding: 6vh;
-  }
-}
-
-.pagenotfound:hover {
-  background-color: #1d0606;
-  transition: all ease-in-out 0.2s;
 }
 
 .cloud {
@@ -89,5 +82,32 @@
   }
   color: $irevamp-color-primary;
   background: $irevamp-color-secondary;
+  transition: all ease-in-out 0.2s;
+}
+
+.crane {
+  max-width: 25ch;
+
+  @include xs {
+    width: 70%;
+  }
+
+  @include gt-md {
+    max-width: 35ch;
+  }
+}
+
+.pagenotfound-button {
+  background-color: $irevamp-color-primary;
+  outline: none;
+  border: 0;
+  border-radius: 35px;
+  padding: 5px 19px;
+  transition: all ease-in-out 0.2s;
+}
+
+.pagenotfound-button:hover {
+  cursor: pointer;
+  background-color: $irevamp-color-secondary-light;
   transition: all ease-in-out 0.2s;
 }
