--- a/src/sass/_pagenotfound.scss
+++ b/src/sass/_pagenotfound.scss
@@ -86,14 +86,18 @@
 }
 
 .crane {
-  max-width: 25ch;
+  max-width: 80%;
 
   @include xs {
     width: 70%;
   }
 
-  @include gt-md {
-    max-width: 35ch;
+  @include gt-xs {
+    max-width: 45%;
+  }
+
+  @include gt-sm {
+    max-width: 65%;
   }
 }
 
