--- a/src/404.njk
+++ b/src/404.njk
@@ -6,8 +6,8 @@ title: 'Error 404'
 <div class="pagenotfound slide-up">
    
     <div class="pagenotfound-container slide-up">
-        <div class="irevamp-h5 uppercase bold600" style="margin-bottom: 0">404. <span class="irevamp-ink--secondary-light ">That's an error.</div>
-        <div class="irevamp-lead irevamp-ink--secondary" style="margin: 0 auto 2em">That page probably doesn't exist!</div>
+        <div class="irevamp-h5 notfound-h5 uppercase bold600" style="margin-bottom: 0">404. <span class="irevamp-ink--secondary-light ">That's an error.</div>
+        <div class="irevamp-lead notfound-lead irevamp-ink--secondary" style="margin: 0 auto 2em">That page probably doesn't exist!</div>
 
     {# <div class="cloud"></div> #}
     <img class="crane irevamp-mx-auto" src="{{ '/crane.png' }}">
@@ -15,7 +15,7 @@ title: 'Error 404'
         {# <div class="irevamp-h5 salutation uppercase bold600" style="margin: 3em ">X rarely ever marks the spot,</div> #}
         {# <div class="intro-about" style="margin: 0em 0 3em;">and it looks like we're missing a link here. Let's get you sorted:</div> #}
         {# <a href="#" onclick="history.back()" class="intro bold600 uppercase">Go back ⮌</a> #}
-        <button onclick="history.back()" class="intro bold600 uppercase pagenotfound-button" style="margin-top: 2.5em">Go back &#11148;</button>
+        <button onclick="history.back()" class="intro bold600 uppercase pagenotfound-button" style="margin-top: 2.5em">Go back <span>&#11148;</span></button>
     </div>
 
 </div>
