--- a/src/sass/_pagenotfound.scss
+++ b/src/sass/_pagenotfound.scss
@@ -2,7 +2,8 @@
 @use "media-queries" as *;
 
 .pagenotfound {
-  padding: 6vh 0;
+  padding-top: 16vh;
+  padding-bottom: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -114,4 +115,16 @@
   cursor: pointer;
   background-color: $irevamp-color-secondary-light;
   transition: all ease-in-out 0.2s;
+}
+
+.notfound-h5 {
+  @include xs {
+    font-size: 24px;
+  }
+}
+
+.notfound-text {
+  @include xs {
+    font-size: 16px;
+  }
 }
