--- a/src/404.njk
+++ b/src/404.njk
@@ -6,8 +6,8 @@ title: 'Error 404'
 <div class="pagenotfound slide-up">
    
     <div class="pagenotfound-container slide-up">
-        <div class="irevamp-h5 notfound-h5 uppercase bold600" style="margin-bottom: 0">404. <span class="irevamp-ink--secondary-light ">That's an error.</div>
-        <div class="irevamp-lead notfound-lead irevamp-ink--secondary" style="margin: 0 auto 2em">That page probably doesn't exist!</div>
+        <div class="irevamp-h5 notfound-h5 uppercase bold600" style="margin-bottom: 0">Whoops... <span class="irevamp-ink--secondary-light ">That's an error.</span></div>
+        <div class="irevamp-lead notfound-lead irevamp-ink--primary" style="margin: 0 auto 2em"><span class="irevamp-ink--secondary-light bold600">404: </span>The page probably doesn't exist!</div>
 
     {# <div class="cloud"></div> #}
     <img class="crane irevamp-mx-auto" src="{{ '/crane.png' }}">
