--- a/src/sass/_pagenotfound.scss
+++ b/src/sass/_pagenotfound.scss
@@ -8,7 +8,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%; height: 100%;
+  width: 100%;
+  height: 100%;
 
   .pagenotfound-container {
     text-align: center;
@@ -88,6 +89,10 @@
 
 .crane {
   max-width: 80%;
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  transition: all 1s ease;
+  filter: hue-rotate(0);
 
   @include xs {
     width: 70%;
@@ -102,6 +107,19 @@
   }
 }
 
+@keyframes hue {
+  100% {
+    -webkit-filter: hue-rotate(360deg);
+    filter: hue-rotate(360deg);
+  }
+}
+
+.crane:hover {
+  cursor: progress;
+  -webkit-animation: hue 5s linear;
+  animation: hue 5s ease-in-out;
+}
+
 .pagenotfound-button {
   background-color: $irevamp-color-primary;
   outline: none;
@@ -113,7 +131,7 @@
 
 .pagenotfound-button:hover {
   cursor: pointer;
-  background-color: $irevamp-color-secondary-light;
+  background-color: $irevamp-color-secondary;
   transition: all ease-in-out 0.2s;
 }
 
