--- a/src/sass/_menu.scss
+++ b/src/sass/_menu.scss
@@ -29,6 +29,14 @@ $menu-font-cursive: "Great Vibes", cursive;
     font-weight: 700;
     letter-spacing: 0.1em;
     text-align: center;
+    line-height: 1.3;
+transition: all ease-in-out 0.3s;
+
+}
+
+  .menu-header:hover {
+    filter: hue-rotate(40deg);
+    transition: all ease-in-out 0.3s;
   }
 
   .menu-divider {
@@ -57,7 +65,7 @@ $menu-font-cursive: "Great Vibes", cursive;
     color: $menu-color-secondary;
     text-transform: uppercase;
     text-align: center;
-    margin: 1em 0;
+    margin-bottom: 1em;
     letter-spacing: 0.07em;
   }
 
