--- a/src/sass/_menu.scss
+++ b/src/sass/_menu.scss
@@ -30,9 +30,8 @@ $menu-font-cursive: "Great Vibes", cursive;
     letter-spacing: 0.1em;
     text-align: center;
     line-height: 1.3;
-transition: all ease-in-out 0.3s;
-
-}
+    transition: all ease-in-out 0.3s;
+  }
 
   .menu-header:hover {
     filter: hue-rotate(40deg);
@@ -47,6 +46,23 @@ transition: all ease-in-out 0.3s;
 
     @include gt-sm {
       font-size: 4em;
+    }
+  }
+
+  .glossary {
+    font-family: $menu-font-sans;
+    margin-bottom: 10px;
+    color: $menu-color-secondary;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: 0.03em;
+
+    @include gt-xs {
+      margin-top: 1em;
+    }
+
+    @include gt-sm {
+      margin: 1.25em 0;
     }
   }
 
@@ -126,16 +142,16 @@ transition: all ease-in-out 0.3s;
 }
 
 .grape-mode {
-  background-color: #ced4fd  ;
- 
-   .menu-item {
-     background-color: #ced4fd;
-   }
- 
-   .menu-item:hover {
-     filter: brightness(1.08);
-   }
- }  
+  background-color: #ced4fd;
+
+  .menu-item {
+    background-color: #ced4fd;
+  }
+
+  .menu-item:hover {
+    filter: brightness(1.08);
+  }
+}
 
 .menu-item {
   display: flex;
@@ -194,25 +210,30 @@ transition: all ease-in-out 0.3s;
   }
 }
 
+.menu-item__price-project::after {
+  content: "🌱";
+  display: flex;
+  padding-top: 0.25em;
+}
+
 .menu-item-row {
   display: flex;
   flex-direction: column;
-  
+
   @include gt-xs {
     flex-direction: row;
     column-gap: 3em;
   }
-  }
-  
-  .menu-item-column {
-    height: auto;
-    width: 100%;
+}
 
-    @include gt-xs {
-      width: 50%;
-    }
-  }
+.menu-item-column {
+  height: auto;
+  width: 100%;
 
+  @include gt-xs {
+    width: 50%;
+  }
+}
 
 .oak {
   text-align: center;
