Update folder structure

--- a/src/colophon.njk
+++ b/src/colophon.njk
@@ -11,6 +11,10 @@ This website was created from scratch with love, on an old but trustworthy gamin
 
 The primary sans-serif typeface is [Work Sans](http://weiweihuanghuang.github.io/Work-Sans/) by Wei Huang. The text has a 5:1 contrast ratio at Level AA or better, as specified by [WCAG 2.0](https://www.w3.org/TR/WCAG20/).    
     
+The serif typeface on the menu page is [Libre Baskerville](https://fonts.google.com/specimen/Libre+Baskerville) by Pablo Impallari. On the same page, the sans-serif typeface used is [Lato](https://fonts.google.com/specimen/Lato), designed by Łukasz Dziedzic.    
+
+
+
 I used [VSCode](https://code.visualstudio.com/) for development; [Chromium Nightly](https://www.chromium.org/Home/) and [Firefox](https://www.mozilla.org/en-US/firefox/new/) were used for testing.
 <hr />
 <div class="irevamp-text strong">Some resources I found helpful: </div>
