--- a/src/404.njk
+++ b/src/404.njk
@@ -1,5 +1,5 @@
 ---
-layout: bones.njk
+layout: base.njk
 permalink: 404.html
 title: 'Error 404'
 ---
@@ -15,7 +15,7 @@ title: 'Error 404'
         {# <div class="irevamp-h5 salutation uppercase bold600" style="margin: 3em ">X rarely ever marks the spot,</div> #}
         {# <div class="intro-about" style="margin: 0em 0 3em;">and it looks like we're missing a link here. Let's get you sorted:</div> #}
         {# <a href="#" onclick="history.back()" class="intro bold600 uppercase">Go back ⮌</a> #}
-        <div class="irevamp-lead notfound-lead irevamp-ink--primary" style="margin: 2em auto 0">Click <span class="irevamp-ink--primary bold600"><a href="/">here</a></span> to go to the main homepage. Or, perhaps, if you'd like to resume your quest for treasure...</div>
+        <div class="irevamp-lead notfound-lead irevamp-ink--primary" style="margin: 2em auto 0">Click <span class="irevamp-ink--primary bold600"><a href="{{ "/" | url }}">here</a></span> to go to the main homepage. Or, perhaps, if you'd like to resume your quest for treasure...</div>
 
         <button onclick="history.back()" class="intro-about bold600 uppercase pagenotfound-button" style="">Go back</button>
     </div>
