--- a/src/sass/_pagenotfound.scss
+++ b/src/sass/_pagenotfound.scss
@@ -2,8 +2,6 @@
 @use "media-queries" as *;
 
 .pagenotfound {
-  padding-top: 16vh;
-  padding-bottom: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,8 +13,8 @@
     text-align: center;
   }
 
-  @include gt-xs {
-    padding-top: 10vh;
+  @include gt-sm {
+    padding-top: 6vh;
   }
 }
 
@@ -88,14 +86,14 @@
 }
 
 .crane {
-  max-width: 100%;
+  max-height: 30vh;
   -webkit-transform: scaleX(-1);
   transform: scaleX(-1);
   transition: all 1s ease;
   filter: hue-rotate(0);
 
   @include gt-sm {
-    padding: 6vh;
+    max-height: 50vh;
   }
 }
 
@@ -124,7 +122,6 @@
   @include gt-sm {
     margin-top: 1.75em;
   }
-
 }
 
 .pagenotfound-button:hover {
