Fix image passing

--- a/src/_layouts/menucard.njk
+++ b/src/_layouts/menucard.njk
@@ -38,11 +38,11 @@
             {# <p class="menu-description uppercase">{{ description }}</p> #}
 
             <div class="menu-section-title irevamp-mx-auto">{{ subtext }}</div>
-            <img class="oak menu-slide-up" src="{{ '/oakbranch.png' | url }}">
+            <img class="oak menu-slide-up" src="{{ '/img/oakbranch.png' | url }}">
 
     </div>
     {{ content | safe }} 
-    <img class="oak menu-slide-up" src="{{ '/oakbranch.png' | url }}">
+    <img class="oak menu-slide-up" src="{{ '/img/oakbranch.png' | url }}">
             <a class="menu-redirect irevamp-mx-auto" href="/">Click here to go back to main site.</a>
 
   </body>
