Fix image passing #2

--- a/src/404.njk
+++ b/src/404.njk
@@ -10,7 +10,7 @@ title: 'Error 404'
         <div class="irevamp-lead notfound-lead irevamp-ink--primary" style="margin: 0 auto 2em"><span class="irevamp-ink--secondary-light bold600">404: </span>The page probably doesn't exist!</div>
 
     {# <div class="cloud"></div> #}
-    <img class="crane irevamp-mx-auto" src="{{ '/crane.png' }}">
+    <img class="crane irevamp-mx-auto" src="{{ '/img/crane.png' }}">
 
         {# <div class="irevamp-h5 salutation uppercase bold600" style="margin: 3em ">X rarely ever marks the spot,</div> #}
         {# <div class="intro-about" style="margin: 0em 0 3em;">and it looks like we're missing a link here. Let's get you sorted:</div> #}
