--- a/src/sass/_animations.scss
+++ b/src/sass/_animations.scss
@@ -84,7 +84,7 @@ a:hover {
 //  background clip
 
 .backlit {
-  background: url(/backlit.png) repeat-y;
+  background: url(/img/backlit.png) repeat-y;
 	  -webkit-background-clip: text;
 	  background-clip: text;
 
