Update peach mode for menu

--- a/src/sass/_menu.scss
+++ b/src/sass/_menu.scss
@@ -104,10 +104,10 @@ $menu-font-cursive: "Great Vibes", cursive;
 }
 
 .rose-mode {
-  background-color: #ffe0ec;
+  background-color: #ffcce0;
 
   .menu-item {
-    background-color: #ffe0ec;
+    background-color: #ffcce0;
   }
 
   .menu-item:hover {
@@ -155,10 +155,10 @@ $menu-font-cursive: "Great Vibes", cursive;
 }
 
 .peach-mode {
-  background-color: #ffd2c1;
+  background-color: #ffe2d7;
 
   .menu-item {
-    background-color: #ffd2c1;
+    background-color: #ffe2d7;
   }
 
   .menu-item:hover {
