--- a/src/writing.njk
+++ b/src/writing.njk
@@ -12,25 +12,27 @@ description: Content goes here
 </div> #}
 > [404 page test](nolinkhere)
 
+
+I like to write.
+
 <div class="irevamp-container">
   <div class="irevamp-section slide-up">
-    <h5 style="margin-bottom: 0.6em;">Posts:</h5>
-    <ul class="irevamp-column-container">
-      {# {%- for page in collections.pages | reverse -%}
-      <li class="irevamp-card">
-        <div class="irevamp-card__content">
+    <h5 style="margin-bottom: 0.6em;">List of entries:</h5>
+    <ul class="">
+      {%- for page in collections.entry | reverse -%}
+      <li class="irevamp-postlist">
+        <div class="irevamp-postlist__content">
           <a href="{{ page.url }}" class="irevamp-card__title bold600">{{ page.data.title }}</a>
-          <p class="irevamp-lead">{{ page.data.description }}</p>
-          <p class="irevamp-card__date">{{ page.data.date | postDate  }}</p>
+          <p class="irevamp-lead">{{ page.data.description }} |  {{ page.data.date | postDate  }}</p>
         </div>
       </li>
-      {%- endfor -%} #}
+      {%- endfor -%}
 
 </ul>
-    {%- for entry in collections.entry | reverse -%}
+    {# {%- for entry in collections.entry | reverse -%}
       <a href="{{ entry.url }}" class="irevamp-card__title bold600">{{ entry.data.title }}</a>
       <p class="irevamp-lead">{{ entry.data.description }}</p>
       <p class="irevamp-card__date">{{ entry.data.date | postDate  }}</p>
-    {%- endfor -%}
+    {%- endfor -%} #}
   </div>
 </div>
