--- a/src/sass/_menu.scss
+++ b/src/sass/_menu.scss
@@ -50,13 +50,13 @@ $menu-font-cursive: "Great Vibes", cursive;
   }
 
   .glossary {
-    font-family: $menu-font-sans;
+    font-family: $menu-font-serif;
     margin-bottom: 10px;
     color: $menu-color-secondary;
-    text-transform: uppercase;
+    text-transform: lowercase;
     text-align: center;
-    letter-spacing: 0.03em;
     font-size: 1rem;
+    font-weight: bold;
 
     @include gt-xs {
       margin-top: 1em;
