--- a/src/_layouts/entry.njk
+++ b/src/_layouts/entry.njk
@@ -6,16 +6,22 @@ layout: base.njk
   <div class="irevamp-container slide-up">
     <h1 class="irevamp-ink--primary irevamp-mb-none bold600">{{ title }}</h1>
     {% if description %}
-    <h5 class="irevamp-content-maxlength irevamp-ink--gray irevamp-mt-md irevamp-mx-auto irevamp-description">
-     {{ description }}
-    </h5>
+      <h5 class="irevamp-content-maxlength irevamp-ink--gray irevamp-mt-md irevamp-mx-auto irevamp-description">
+        {{ description }}
+      </h5>
     {% endif %}
   </div>
 </header>
 <main class="irevamp-container slide-up">
   <article class="irevamp-mx-auto">
     {{ content | safe }}
-
-Filed under:  {% for tag in tags %}<span><a href="/tags/{{ tag }}/" aria-label="Pages tagged with {{tag}}">{{tag}}</a></span> {% endfor %}
+<hr class="menu-hori"/ >
+    <p class="irevamp-lead">Filed under:  
+    {% for tag in tags %}
+        <span class="bold600">
+          <a href="/tags/{{ tag }}/" aria-label="Pages tagged with {{tag}}">{{tag}}</a>
+        </span>
+      {% endfor %}
+    </p>
   </article>
 </main>
