--- a/src/tags.njk
+++ b/src/tags.njk
@@ -10,32 +10,28 @@ permalink: /tags/{{ tag }}/
 title: Tagged content
 ---
 <div class="irevamp-hero">
-  <div class="irevamp-section slide-up">
-    <h3 style="margin-bottom: 0.6em;" class="">Here are all articles tagged “{{ tag }}.” :</h3>
-<ul>
-    {% set taglist = collections[tag] | reverse %}
-    {% for post in taglist %}
-        <li>
-            <a href="{{ post.url }}" class="text--larger">{{ post.data.title }}</a>
-            <p>
-                <span>
-                    <span>
-                        {% for tag in post.data.tags %}
-                            {% if tag != 'notes' %}
-                                <span>
-                                    {{tag}}
-                                </span>
-                            {% endif %}
-                        {% endfor %}
-                    </span>
-                </span>
-                <br>
-                {{ post.data.description }}
-            </p>
-        </li>
-    {% endfor %}
-</ul>
+    <div class="irevamp-section slide-up">
+        <h3 style="margin-bottom: 0.6em;" class="bold600">Here are all articles tagged “{{ tag }}”:</h3>
+        <ul class="irevamp-list-unstyled irevamp-postlist">
+            {% set taglist = collections[tag] | reverse %}
+            {% for post in taglist %}
+                <li class="irevamp-postlist__content">
+                    <a href="{{ post.url }}" class="irevamp-text">{{ post.data.title }}</a>
+                    <p>
+                        <span class="irevamp-lead">
 
-  </div>
+                            <span class="irevamp-lead">{{ post.data.description }} • {{ post.data.date | postDate  }}
+                                {# {% for tag in post.data.tags %}
+                                    {% if tag != 'entry' %}
+                                        <span>• tagged: {{tag}}</span>
+                                    {% endif %}
+                                {% endfor %} #}
+                            </span>
+                        </span>
+                    </p>
+                </li>
+            {% endfor %}
+        </ul>
+
+    </div>
 </div>
-
