Update index page

--- a/src/index.njk
+++ b/src/index.njk
@@ -13,24 +13,23 @@ templateEngineOverride: md, njk
   I'm a big fan of several things. Currently, I work as a front-end web developer in [Portland, OR]().
 
 <div class="irevamp-skin"></div>
+  <blockquote class="blockquote-lilac">
 
-<blockquote class="blockquote-lilac">
-<p>If you arrived to this page from the project menu card, go back <a href="/menu">here</a></p>
+**THIS WEBSITE IS CURRENTLY ~~AVAILABLE FOR VIEWING~~ UNDER CONSTRUCTION**
 </blockquote>
 
-> **THIS WEBSITE IS CURRENTLY ~~AVAILABLE FOR VIEWING~~ UNDER CONSTRUCTION**
+> If you arrived to this page from the project menu card, go back [here](/menu)
 
-  </div>
-  </div>
+> Check out the [styleguide](/styleguide) for this site
+</div>
+</div>
+
 </header>
+
 <main class="irevamp-container">
 
 
 
-  <div>
-{% include 'goodreads.html' %}
-  </div>
 
-{{ content | safe }}
-
+  {{ content | safe }}
 </main>
