--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -119,7 +119,7 @@ h5,
 p,
 li {
   font-size: $irevamp-mini-font-size;
-  
+
   @include gt-sm {
     font-size: $irevamp-lead-font-size;
   }
@@ -264,8 +264,10 @@ blockquote {
 .irevamp-postlist__content {
   text-align: left;
   margin: 1rem auto;
-  
+
   .irevamp-text {
-    font-size: 1.25;
+    @include gt-sm {
+      font-size: 125%;
+    }
   }
 }
