Add repo link to index

--- a/src/index.njk
+++ b/src/index.njk
@@ -15,7 +15,7 @@ templateEngineOverride: md, njk
 <div class="irevamp-skin"></div>
   <blockquote class="blockquote-lilac">
 
-**THIS WEBSITE IS CURRENTLY ~~AVAILABLE FOR VIEWING~~ UNDER CONSTRUCTION**
+**THIS WEBSITE IS CURRENTLY ~~AVAILABLE FOR VIEWING~~ UNDER CONSTRUCTION** (view the repo <a href="https://github.com/partheus/site-revamp">here</a>)
 </blockquote>
 
 > If you arrived to this page from the project menu card, go back [here](/menu)
