--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -125,7 +125,7 @@ li {
   }
 
   @include gt-md {
-    font-size: $irevamp-text-font-size;
+    font-size: 24px;
   }
 }
 
@@ -252,7 +252,7 @@ blockquote {
 }
 
 .irevamp-description {
-  font-size: 1.1em;
+  font-size: 1.3em;
   color: $irevamp-color-secondary;
 }
 
@@ -263,11 +263,11 @@ blockquote {
 
 .irevamp-postlist__content {
   text-align: left;
-  margin: 1rem auto;
+  margin: 1.25rem auto;
 
   .irevamp-text {
     @include gt-sm {
-      font-size: 125%;
+      font-size: 110%;
     }
   }
 }
