Port old blog posts into new repo

--- a/src/_layouts/entry.njk
+++ b/src/_layouts/entry.njk
@@ -15,12 +15,16 @@ layout: base.njk
 <main class="irevamp-container slide-up">
   <article class="irevamp-mx-auto">
     {{ content | safe }}
-<hr class="menu-hori"/ >
+    <hr class="menu-hori"/ >
     <p class="irevamp-lead" style="padding: 3vh 0;">Filed under:  
     {% for tag in tags %}
-        <span class="bold600">
-          <a href="/tags/{{ tag }}/" aria-label="Pages tagged with {{tag}}">{{tag}}</a>
-        </span>
+        {% if tag != 'entry' %}
+          <span class="bold600">
+            <a href="/tags/{{ tag }}/" aria-label="Pages tagged with {{tag}}">
+              <span>
+                {{tag}}</span></a>
+          </span>
+        {% endif %}
       {% endfor %}
     </p>
   </article>
