--- a/src/_layouts/entry.njk
+++ b/src/_layouts/entry.njk
@@ -5,15 +5,16 @@ layout: base.njk
 <header class="irevamp-hero">
   <div class="irevamp-container slide-up">
     <h1 class="irevamp-ink--primary irevamp-mb-none bold600">{{ title }}</h1>
+    <div class="irevamp-text irevamp-ink--secondary irevamp-mt-sm"></span></div>
     {% if description %}
       <h5 class="irevamp-content-maxlength irevamp-ink--gray irevamp-mt-sm irevamp-mx-auto irevamp-description">
         {{ description }}
-      </h5>
-    {% endif %}
+      
+    {% endif %}<span id="time-to-read"></h5>
   </div>
 </header>
 <main class="irevamp-container slide-up">
-  <article class="irevamp-mx-auto">
+  <article class="irevamp-mx-auto" id="article">
     {{ content | safe }}
     <hr class="menu-hori"/ >
     <p class="irevamp-lead" style="padding: 3vh 0;">Filed under:  
@@ -29,3 +30,28 @@ layout: base.njk
     </p>
   </article>
 </main>
+
+<script>
+//function use to convert character into words
+function get_text(el) {
+    ret = "";
+    var length = el.childNodes.length;
+    for(var i = 0; i < length; i++) {
+        var node = el.childNodes[i];
+        if(node.nodeType != 8) {
+            ret += node.nodeType != 1 ? node.nodeValue : get_text(node);
+        }
+    }
+    return ret;
+}
+//main body in which all words exist                              
+var words = get_text(document.getElementById('article'));
+var count = words.split(' ').length;
+//avg reading speed of person 200 word per minute
+var avg = 200;
+var counted = count / avg;
+var maincount = Math.round(counted)
+//show output of code                              
+document.getElementById("time-to-read").innerHTML = "⁃ "+ maincount + " minute read";
+
+</script> 
